# dict-obj

./: .gitignore  README.rst  setup.cfg
.github/: PULL_REQUEST_TEMPLATE.md
dict_obj/: cli.py  dict_obj.py
docs/: CONTRIBUTING.md  index.rst  installation.rst  introduction.rst  usage.rst
tests/: test_cli.py  test_library.py
