[metadata]
name = dict-obj
version = 0.0.1
description = Object interface for a Python dictionary.
long_description = file: README.rst
author = Jeroen F.J. Laros
author_email = jlaros@fixedpoint.nl
url = https://github.com/jfjlaros/dict-obj
keywords =
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
copyright = 2018

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    configparser
